# pymad

./: .gitignore  CMakeLists.txt  README.md  setup.py
src/: pymadfile.c  pymadfile.h
